--- a/flask_app/templates/recipe_details.html
+++ b/flask_app/templates/recipe_details.html
@@ -34,6 +34,9 @@
                         <p> {{recipe.instructions}} </p>
                         <h2 style="color:rgb(33, 205, 125);">Cooked At</h2>
                         <p> {{recipe.cooked_at|format_date}} </p>
+                        <h2 style="color:rgb(33, 205, 125);">Likes</h2>
+                        <p> {{ count }} </p>
+
                     </div>
                 </div>
             </div>
